--- a/tugas1.html
+++ b/tugas1.html
@@ -9,6 +9,7 @@
     <h1>Hello world</h1>
     <h3>Dandi Cahyo Santoso</h3>
     <h3>Farhan Araya Setiawan</h3>
+    <h3>Ovi Meivina Basori<h3>
 </body>
 
 </html>
