--- a/tugas1.html
+++ b/tugas1.html
@@ -10,6 +10,7 @@
     <h3>Dandi Cahyo Santoso</h3>
     <h3>Farhan Araya Setiawan</h3>
     <h3>Ovi Meivina Basori<h3>
+    <h3>Syehfi Amali<h3></h3>
 </body>
 
 </html>
